@@ -4,7 +4,7 @@ include ../packages.mk
 all: gpsim-install.tag clean
 
 gpsim-download.tag:
-	svn --force export https://svn.sourceforge.net/svnroot/gpsim/trunk gpsim
+	svn --force export https://gpsim.svn.sourceforge.net/svnroot/gpsim/trunk gpsim
 	touch $@
 
 gpsim-configure.tag: gpsim-download.tag
