@@ -1,3 +1,7 @@
+2007-06-12 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.gpsim/Makefile: use new svn URL scheme
+
 2007-06-01 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.mingw/Makefile: upgraded to gcc-4.2.0,
